--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,9 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My first webpage!</title>
+    <title>Mermaids!</title>
   </head>
   <body>
-
-  </body>
+A mermaid is a legendary aquatic creature with the head and upper body of a female human and the tail
+of a fish. </body>
 </html>
