--- a/favorite-things.html
+++ b/favorite-things.html
@@ -5,6 +5,9 @@
     <title>My first Webpage!</title>
   </head>
   <body>
+    <h1>My first Webpage</h1>
+    <h2>Written with a little guidance from Hola Code</h2>
+    
     <p>Hello world!</p>
     <p>Welcome to my first webpage!</p>
   </body>
