add list elements

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -7,8 +7,16 @@
   <body>
     <h1>My first Webpage</h1>
     <h2>Written with a little guidance from Hola Code</h2>
-    
+
     <p>Hello world!</p>
     <p>Welcome to my first webpage!</p>
+
+    <p>hERE ARE SOME THINGS I'm going to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>JavaScript</li>
+      <li>And a lot more!</li>
+    </ul>
   </body>
 </html>
