My favorite thing-food and friends

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -11,7 +11,7 @@
     <p>Hello world!</p>
     <p>Welcome to my first webpage!</p>
 
-    <p>hERE ARE SOME THINGS I'm going to learn about coding:</p>
+    <p>Here are some thingsS I'm going to learn about coding:</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
