Bold title and emphisize Holacode

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -6,10 +6,10 @@
   </head>
   <body>
     <h1>My first Webpage</h1>
-    <h2>Written with a little guidance from Hola Code</h2>
+    <h2>Written with a little guidance from <em>Hola Code</em></h2>
 
     <p>Hello world!</p>
-    <p>Welcome to my first webpage!</p>
+    <p>Welcome to <strong> my first webpage!</strong></p>
 
     <p>Here are some thingsS I'm going to learn about coding:</p>
     <ul>
