--- a/favorite-things.html
+++ b/favorite-things.html
@@ -18,5 +18,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
+    <p>Check out <a href="http://www.connovo.org/holacode/">Hola Code</a>. It's a great place to learn web
+      development skills!</p>
   </body>
 </html>
