--- a/favorite-things.html
+++ b/favorite-things.html
@@ -20,5 +20,6 @@
     </ul>
     <p>Check out <a href="http://www.connovo.org/holacode/">Hola Code</a>. It's a great place to learn web
       development skills!</p>
+      <img src="images/elephant.jpg" alt="A photo of an elephant">
   </body>
 </html>
