--- a/favorite-things.html
+++ b/favorite-things.html
@@ -5,7 +5,7 @@
     <title>My first Webpage!</title>
   </head>
   <body>
-    <h1>My first Webpage</h1>
+    <h1><u>My first Webpage</u></h1>
     <h2>Written with a little guidance from <em>Hola Code</em></h2>
 
     <p>Hello world!</p>
@@ -18,7 +18,7 @@
       <li>JavaScript</li>
       <li>And a lot more!</li>
     </ul>
-    <p>Check out <a href="http://www.connovo.org/holacode/">Hola Code</a>. It's a great place to learn web
+    <p>Check out <a href="http://www.connovo.org/holacode/"><strong>Hola Code</strong></a>. It's a great place to learn web
       development skills!</p>
       <img src="images/elephant.jpg" alt="A photo of an elephant">
   </body>
