added photo comment

--- a/favorite-things.html
+++ b/favorite-things.html
@@ -21,5 +21,6 @@
     <p>Check out <a href="http://www.connovo.org/holacode/"><strong>Hola Code</strong></a>. It's a great place to learn web
       development skills!</p>
       <img src="images/elephant.jpg" alt="A photo of an elephant">
+      <p><em>Elephant hanging out with a doggo!</em></p>
   </body>
 </html>
